--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
     ]
   },
   "dependencies": {
+    "antd": "^5.23.3",
+    "axios": "^1.7.9",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.0.8",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
