--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.3",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.8",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "tailwindcss": "^4.0.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
