--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "sass": "^1.83.4",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3",
     "yup": "^1.6.1"
   },
