--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "sass": "^1.83.4",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3",
     "yup": "^1.6.1"
