feat: added DevPanel and buy game

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^6.4.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
+    "@types/recharts": "^1.8.29",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
@@ -38,6 +39,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sass": "^1.83.4",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.2",
@@ -51,6 +53,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
