--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/recharts": "^1.8.29",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.8",
     "js-cookie": "^3.0.5",
