--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
     "sass": "^1.83.4",
