--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
@@ -55,6 +56,7 @@
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.17.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/moment": "^2.11.29",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/swiper": "^5.4.3",
