--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
+    "payment": "^2.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
@@ -57,6 +58,7 @@
     "@eslint/js": "^9.17.0",
     "@types/js-cookie": "^3.0.6",
     "@types/moment": "^2.11.29",
+    "@types/payment": "^2.1.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/swiper": "^5.4.3",
