fix: fixed ts errors and warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
+
 }
+
