--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "payment": "^2.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
